rgw: check bucket shard init status in RGWRadosBILogTrimCR

to avoid using not properly initialized bs.bucket_obj.

Fixes: https://tracker.ceph.com/issues/54119
Signed-off-by: Mykola Golub <mgolub@suse.com>
(cherry picked from commit 02c6a56f49571183cd599932b26ff90c2b4b7683)

Conflicts:
	src/rgw/rgw_cr_rados.cc
	src/rgw/rgw_cr_rados.h
 - We were initializing in both the constructor (unchecked) AND in
   send_request (checked).

Resolves: rhbz#2075214
Signed-off-by: Adam C. Emerson <aemerson@redhat.com>